--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "bootstrap": "^5.1.3",
     "bpg-square": "^1.0.0",
+    "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
     "swiper": "^8.4.2",
     "tslib": "^2.3.0",
