--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.1.3",
+    "mapbox-gl": "^2.14.1",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-mapbox-gl": "^9.1.0",
     "rxjs": "~7.8.0",
     "swiper": "^8.4.2",
     "tslib": "^2.3.0",
@@ -30,6 +32,7 @@
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/mapbox-gl": "^2.7.11",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
