--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mapbox-gl": "^2.14.1",
     "ngx-bootstrap": "^10.2.0",
     "ngx-mapbox-gl": "^9.1.0",
+    "ngx-skeleton-loader": "^7.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^8.4.2",
     "tslib": "^2.3.0",
